# geode

./: .coverage  .env.example  .gitignore  .mcp.json  .mcp_env.example  .owner  .pre-commit-config.yaml  .pymarkdown.json  .yamllint.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEODE.md  LICENSE  NOTICE  README.ko.md  README.md  SECURITY.md  geode_checkpoints.db-shm  geode_checkpoints.db-wal  label.sh  package-lock.json  pyproject.toml
.claude/: MEMORY.md  SOUL.md  mcp_servers.json  settings.json
.claude/agents/: seed_critic.md  seed_evolver.md  seed_generator.md  seed_meta_reviewer.md  seed_pilot.md  seed_proximity.md  seed_ranker.md
.claude/commands/: kent-beck-refactor.md
.claude/hooks/: check-progress.sh
.claude/rules/: anime-ip.md  indie-steam.md
.geode/: config.toml  config.toml.example
.geode/memory/: PROJECT.md
.geode/rules/: anime-ip.md  dark-fantasy.md  indie-steam.md  parallel-search-delegation.md  schedule-date-aware.md
.geode/skills/: TEMPLATE.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-backmerge.yml  ci.yml  install-smoke.yml  pages.yml  petri-publish.yml  release.yml
.next/: trace  trace-build
autoresearch/: README.md  __init__.py  admire_means.py  baseline_marker.py  bench_means.py  fitness.py  hypothesis.py  loop.py  prepare.py  program.md  ratchet.py  rationale_extractor.py  train.py  ux_means.py
autoresearch/state/: baseline_archive.jsonl  group_variance_history.jsonl  mutations.jsonl
blogs/: 03-agent-memory-retrieval.md  building-production-ai-agents-with-langgraph.md  evaluation-round1.md  evaluation-round2.md  gap-analysis-blog2.md  gap-analysis.md
core/: __init__.py  async_runtime.py  config.py  graph.py  mcp_server.py  paths.py  runtime.py  runtime_audit.py  state.py  time_format.py  unicode_safety.py
core/agent/: activity_channel.py  agent_contracts_policy.py  agentic_loop.py  approval.py  approval_fsm.py  bash_tool.py  budget.py  candidate_sampling.py  capability_graph.py  cognitive_state.py  cognitive_state_ctx.py  context_manager.py  convergence.py  decomposition_policy.py  error_recovery.py  evidence_ledger.py  handoff.py  heuristics_policy.py  loop.py  plan.py  policy_sot.py  prompt_dump.py  reasoning_metrics.py  reflection_policy.py  safety.py  safety_constants.py  style_guide_policy.py  sub_agent.py  sub_agent_budget.py  subagent_roles.py  system_injection.py  system_prompt.py  task_isolation.py  task_preflight.py  tool_descriptions_policy.py  tool_executor.py  tool_policy.py  tool_ranking.py  tool_search.py  verify.py  (+1 more)
core/audit/: __init__.py  contracts.py  diagnostics.py  dim_extractor.py  eval_to_jsonl.py  judge_agreement.py  manifest.py
core/auth/: __init__.py  auth_toml.py  claude_code_oauth.py  codex_cli_oauth.py  cooldown.py  credential_breadcrumb.py  credential_cache.py  errors.py  google_oauth.py  jwt_claims.py  oauth_login.py  plan_registry.py  plans.py  profiles.py  rotation.py
core/automation/: __init__.py  calendar_bridge.py  correlation.py  drift.py  expert_panel.py  feedback_loop.py  model_registry.py  nl_scheduler.py  outcome_tracking.py  port.py  predefined.py  scheduler.py  snapshot.py  trigger_endpoint.py  triggers.py
core/channels/: binding.py
core/cli/: __init__.py  _helpers.py  agentic_loop.py  (+58 more)
diagrams/: memory-hierarchy.mmd
docs/: architecture.md  as-is-to-be-flexibility.md  daily-report-2026-03-10.md  e2e-orchestration-scenarios.md  general-assistant-transformation.md  layer-implementation-plan.md  nl-routing-demo-scenario.md  operator-mode-a.md  orchestration-decision.md  progress.md  scaffold-architecture.md  scaffold-skills.md  setup.ko.md  setup.md  v052-refactor-plan.md  v053-cleanup-targets.md  v1.0.0-stability-contract.md  workflow.ko.md  workflow.md
experimental/: README.md
geode/: __init__.py  cli.py  config.py  graph.py  mcp_server.py  runtime.py  state.py
plugins/: __init__.py
scripts/: architecture_baseline.py  assemble_seed_pool.py  backfill_baseline_registry_row.py  build_literature_listing.py  build_seeds_listing.py  build_self_improving_hub.py  check_architecture_exceptions.py  check_architecture_roadmap.py  check_docs_canon.py  check_docs_links.py  check_legacy_imports.py  check_llms_version.py  check_official_docs.py  check_package_artifacts.py  check_repo_hygiene.py  check_slop_ratchet.py  eco2_token_cost.py  extract_baseline_transcripts.py  git_command.py  lint_pages_markdown.sh  petri_analyze.py  petri_viz_summary.py  prepare_hf_release_bundle.py  reconcile_seed_bundle.py  render_homebrew_formula.py  resolve_architecture_roadmap_trust.py  retrofit_manifest.py  run_campaign.py  slop_audit.py  slop_audit_baseline.md  slop_ratchet_baseline.json  validate_petri_bundle.py  verify_public_distribution.py  watch_campaign.py
site/: CLAUDE.md  CONTENT-CANON.md  DESIGN.md  DOCS-PROGRESS.md  next.config.ts  package-lock.json  package.json
state/: README.md
tests/: _live_audit_runner.py  conftest.py  test_action_summary.py  test_adapter_capability_dispatch.py  test_adapter_max_retries.py  test_adapter_timeout_and_serialization.py  test_adr_012_parity.py  test_adr_012_surface_tiers.py  test_adr_012_tier_2_deny_list.py  test_adr_013_mutation_surfaces.py  test_agent_memory.py  test_agent_reflection.py  test_agent_runtime_state.py  test_agent_runtime_state_wiring.py  test_agentic_loop.py  test_agentic_loop_adapter_name_lookup.py  test_agentic_response.py  test_agentic_ui.py  test_agents_ext.py  test_analysis_tools.py  test_analysts.py  test_anthropic_messages_cache.py  test_anthropic_reasoning_v056.py  test_anthropic_sampling_params.py  test_arun_llm_dispatch.py  test_arun_model_drift_sync.py  test_arun_round_guards.py  test_assemble_seed_pool.py  test_atomic_io.py  test_attribution_belief.py  test_audit_lane_capacity.py  test_auth_errors.py  test_auth_json_migration.py  test_auth_profiles.py  test_auth_store_singleton.py  test_auth_toml.py  test_auto_learn.py  test_automation_feedback_loop.py  test_autonomous_safety.py  test_autoresearch_train.py  (+365 more)
(+8528 files in other folders)
