[project]
name = "geode"
version = "0.50.2"
description = "GEODE — 범용 자율 실행 에이전트"
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.84.0",
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.14.1",
    "httpx>=0.27.0",
    "langgraph>=1.1.0",
    "langgraph-checkpoint>=4.0.1",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "numpy>=2.2.0",
    "openai>=2.26.0",
    "openai-agents>=0.13.0",
    "prompt-toolkit>=3.0.52",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "rich>=14.0.0",
    "simple-term-menu>=1.6.0",
    "typer>=0.15.0",
]

[project.scripts]
geode = "core.cli:app"

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]
desktop = ["pyautogui>=0.9.54", "Pillow>=10.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short --strict-markers -m 'not live'"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring external services",
    "live: marks tests that make real LLM API calls (deselect with '-m \"not live\"')",
]

[dependency-groups]
dev = [
    "bandit>=1.8.0",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
    "ruff>=0.15.2",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["core", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "S", "N", "C4", "RUF"]
ignore = [
    "S101",   # assert — used extensively in tests and fixture validation
    "S311",   # non-cryptographic random — intentional in data generator
    "N806",   # non-lowercase variable — FIXTURE_MAP, COMMAND_MAP patterns
    "N803",   # invalid argument name — LangGraph callback signatures
    "RUF001", # ambiguous unicode char in string — Korean/English mixed project
    "RUF002", # ambiguous unicode char in docstring
    "RUF003", # ambiguous unicode char in comment
    "RUF012", # mutable class default — Pydantic models handle this
    "RUF059", # unused unpacked variable — LangGraph stream event destructuring
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106", "S310", "B017", "E501"]
"core/cli/bash_tool.py" = ["S602"]  # shell=True is intentional for agentic bash tool

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B105", "B110", "B311", "B404", "B603", "B607"]

[tool.coverage.run]
source = ["core"]
branch = true
omit = [
    "core/ui/*",
    "core/cli/__init__.py",
    "core/cli/commands.py",
    "core/mcp_server.py",
    "core/tools/web_tools.py",
    "core/tools/document_tools.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 75
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "langgraph.*",
    "langchain_core.*",
    "simple_term_menu.*",
    "mcp.*",
]
ignore_missing_imports = true
