[project]
name = "geode"
version = "0.61.0"
description = "GEODE — 범용 자율 실행 에이전트"
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.84.0",
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.14.1",
    "httpx>=0.27.0",
    "langgraph>=1.1.0",
    "langgraph-checkpoint>=4.0.1",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "numpy>=2.2.0",
    "openai>=2.26.0",
    "openai-agents>=0.13.0",
    "prompt-toolkit>=3.0.52",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "rich>=14.0.0",
    "simple-term-menu>=1.6.0",
    "typer>=0.15.0",
]

[project.scripts]
geode = "core.cli:app"

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]
desktop = ["pyautogui>=0.9.54", "Pillow>=10.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short --strict-markers -m 'not live'"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring external services",
    "live: marks tests that make real LLM API calls (deselect with '-m \"not live\"')",
]

[dependency-groups]
dev = [
    "bandit>=1.8.0",
    "import-linter>=2.0",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
    "ruff>=0.15.2",
    "types-pyyaml>=6.0.12.20250915",
]


# v0.52 phase 6 — process binding 강제 (B2/B8 재발 방지)
# CLI/agent/server/channels 사이의 직접 import 를 정적 차단한다.
# 위반 시 `lint-imports` 실패 → CI 에서 PR merge 차단.
[tool.importlinter]
root_package = "core"

[[tool.importlinter.contracts]]
name = "CLI must not import server/channels (process boundary)"
type = "forbidden"
source_modules = ["core.cli"]
forbidden_modules = ["core.server", "core.channels"]
# v0.52 phase 6 — geode serve 명령이 cli/__init__.py 안에 있어서
# daemon entry 가 cli/ 의 일부로 남아있음. v0.53 에서 server/entrypoint.py
# 로 분리하면 이들 ignore 제거.
ignore_imports = [
    "core.cli -> core.server.supervised.services",
    "core.cli -> core.server.supervised.webhook_handler",
    "core.cli -> core.server.ipc_server.poller",
    "core.cli -> core.channels.binding",
    "core.cli.scheduler_drain -> core.server.supervised.services",
    "core.lifecycle.adapters -> core.channels.binding",
]

[[tool.importlinter.contracts]]
name = "Agent stays pure (no CLI/server)"
type = "forbidden"
source_modules = ["core.agent"]
forbidden_modules = ["core.cli", "core.server"]
# v0.52 phase 6 — agent/ 모듈들이 여전히 cli/ 의 utilities (session_checkpoint,
# transcript, redaction, ip_names, bash_tool, commands) 를 import. v0.53 에서
# server/runtime_state/ 또는 utils/ 로 이동 예정.
ignore_imports = [
    "core.agent.loop -> core.cli.commands",
    "core.agent.loop -> core.cli.session_checkpoint",
    "core.agent.loop -> core.cli.transcript",
    "core.agent.approval -> core.cli",
    "core.agent.tool_executor -> core.cli.bash_tool",
    "core.agent.tool_executor -> core.cli.redaction",
    "core.agent.system_prompt -> core.cli.ip_names",
    "core.agent.worker -> core.cli.tool_handlers",
]

[[tool.importlinter.contracts]]
name = "Server may host agent but never CLI"
type = "forbidden"
source_modules = ["core.server"]
forbidden_modules = ["core.cli"]
# v0.52 phase 6 — server/supervised/services.py (구 gateway/shared_services) 가
# 여전히 cli/{commands,session_state,tool_handlers} + lifecycle/bootstrap 을 통해
# cli/startup 을 import. v0.53 에서 daemon-side handler 를 server/ipc_server/handlers/
# 로 옮기면서 정리.
ignore_imports = [
    "core.server.supervised.services -> core.cli.commands",
    "core.server.supervised.services -> core.cli.session_state",
    "core.server.supervised.services -> core.cli.tool_handlers",
    "core.server.supervised.services -> core.cli.bootstrap",
    "core.lifecycle.bootstrap -> core.cli.startup",
    "core.memory.context -> core.cli.project_detect",
    "core.agent.system_prompt -> core.cli.ip_names",
    "core.agent.worker -> core.cli.tool_handlers",
    "core.agent.loop -> core.cli.session_checkpoint",
    "core.agent.loop -> core.cli.transcript",
    "core.agent.tool_executor -> core.cli.redaction",
    "core.agent.tool_executor -> core.cli.bash_tool",
    "core.agent.approval -> core.cli",
    "core.server.ipc_server.poller -> core.cli",
    "core.server.ipc_server.poller -> core.cli.session_state",
    "core.server.ipc_server.poller -> core.cli.startup",
    "core.server.ipc_server.poller -> core.cli.session_checkpoint",
    "core.agent.loop -> core.cli.commands",
]

[[tool.importlinter.contracts]]
name = "Channels are capability-pure (no process imports)"
type = "forbidden"
source_modules = ["core.channels"]
forbidden_modules = ["core.cli", "core.server", "core.agent"]
# v0.52 phase 6 — channel_manager (구) 의 BasePoller 의존은 사실 channels 가
# poller 추상화를 알아야 함. v0.53 에서 poller_base 를 channels/ 로 승격할지
# server/ 에 둘지 결정.
ignore_imports = [
    "core.channels.binding -> core.server.supervised.poller_base",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["core", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "S", "N", "C4", "RUF"]
ignore = [
    "S101",   # assert — used extensively in tests and fixture validation
    "S311",   # non-cryptographic random — intentional in data generator
    "N806",   # non-lowercase variable — FIXTURE_MAP, COMMAND_MAP patterns
    "N803",   # invalid argument name — LangGraph callback signatures
    "RUF001", # ambiguous unicode char in string — Korean/English mixed project
    "RUF002", # ambiguous unicode char in docstring
    "RUF003", # ambiguous unicode char in comment
    "RUF012", # mutable class default — Pydantic models handle this
    "RUF059", # unused unpacked variable — LangGraph stream event destructuring
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106", "S310", "B017", "E501"]
"core/cli/bash_tool.py" = ["S602"]  # shell=True is intentional for agentic bash tool

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B105", "B110", "B311", "B404", "B603", "B607"]

[tool.coverage.run]
source = ["core"]
branch = true
omit = [
    "core/ui/*",
    "core/cli/__init__.py",
    "core/cli/commands.py",
    "core/mcp_server.py",
    "core/tools/web_tools.py",
    "core/tools/document_tools.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 75
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "langgraph.*",
    "langchain_core.*",
    "simple_term_menu.*",
    "mcp.*",
]
ignore_missing_imports = true
