[project]
name = "geode-agent"
version = "0.99.194"
description = "GEODE — 범용 자율 실행 에이전트"
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.96.0",
    "beautifulsoup4>=4.12.0",
    # defusedxml protects ``core/tools/arxiv.py`` from billion-laughs /
    # external-entity / DTD attacks when parsing arXiv Atom responses.
    # Pure-Python, no transitive deps — ~30 KB.
    "defusedxml>=0.7.1",
    "markdownify>=0.14.1",
    # markdown-it-py renders the self-improving hub's run-report markdown SoT
    # (``docs/self-improving/run-*.md``) to HTML at BUILD TIME in
    # ``scripts/build_self_improving_hub.py`` — no CDN / client-side JS, so the
    # page always renders. Was a transitive of markdownify; declared explicitly
    # so the build never relies on a dep that could vanish.
    "markdown-it-py>=3.0",
    "httpx>=0.27.0",
    "langgraph>=1.1.0",
    "openai>=2.26.0",
    "openai-agents>=0.13.0",
    "prompt-toolkit>=3.0.52",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "rich>=14.0.0",
    "simple-term-menu>=1.6.0",
    "typer>=0.15.0",
    # CLI LaTeX rendering (`core/ui/latex.py`).
    # Tier 1 — pylatexenc converts inline LaTeX (symbols, Greek letters,
    # super/subscripts) to a flat Unicode string. pure-Python, ~5 MB.
    # Tier 2 — latex2sympy2 parses LaTeX into a SymPy expression and
    # sympy.pretty draws a 2D Unicode block (fractions, matrices,
    # integrals, sums). Adds sympy + mpmath (~30 MB).
    "pylatexenc>=2.10",
    "latex2sympy2>=1.9",
    "sympy>=1.12",
]

[project.scripts]
geode = "core.cli:app"
# D-3 (4) 2026-06-10 — first-class MCP entry point: agentic one-shot +
# self-improving propose/apply + memory tools over stdio.
geode-mcp = "core.mcp_server:main"

# inspect_ai discovers third-party model providers via the `inspect_ai`
# entry-point group (importlib.metadata). When the [audit] extra is
# installed and `inspect eval` runs, inspect_ai loads each entry-point
# in this group (`ep.load()`) — that import triggers our
# `plugins/petri_audit/__init__.py:register()`, which registers
# `GeodeModelAPI` so `--model-role target=geode/<base>` resolves.
#
# PR #6 (2026-05-14) — multiple names point to the same module so that
# inspect_ai's ``ensure_entry_points(package=<prefix>)`` finds a matching
# ep regardless of which provider prefix appears in the model id. The
# fast-path matches ep.name == prefix (no full-load fallback needed), so
# ``openai-codex/gpt-5.5`` resolution loads ``plugins.petri_audit`` and
# its top-level ``register_codex()`` runs before the model lookup retries.
# Python's import system de-dupes the module so all registrations run
# exactly once per process.
#
# Reference: inspect_ai/_util/entrypoints.py:ensure_entry_points
[project.entry-points.inspect_ai]
geode_audit = "plugins.petri_audit"
geode = "plugins.petri_audit"
openai-codex = "plugins.petri_audit"
claude-code = "plugins.petri_audit"

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]
desktop = ["pyautogui>=0.9.54", "Pillow>=10.0.0"]
# Petri × GEODE alignment audit (PoC, P2-a). Opt-in via `uv sync --extra audit`.
# Pinned to inspect_petri main commit because v3.0 has no release tag yet
# (latest tagged release is v2.0.0 from 2026-01-22; v3.0.x lives on main).
# Lazy-imported in plugins/petri_audit/ so cold-start is unaffected when not
# installed. See docs/plans/eval-petri-integration.md.
audit = [
    "inspect-ai>=0.3.211",
    "inspect-petri @ git+https://github.com/meridianlabs-ai/inspect_petri@6d9b9e1dbc19bcc06544aca982427cfb37357ffc",
    # CSA-2 (2026-05-22) — paperclip-pattern auditor tool_use bridge.
    # plugins/petri_audit/mcp_bridge/ stands up a stdio MCP server that
    # exposes inspect_ai ToolInfo[] as MCP tools so the claude CLI
    # subprocess (--mcp-config + --strict-mcp-config + --allowed-tools)
    # can emit tool_use blocks under --max-turns 1 without raw-SDK
    # 429 enforcement on Claude Max OAuth tokens.
    "mcp>=1.0.0",
    # PR-SIL-5THEME C2 (2026-05-23) — S6b production wiring 의 7-bench
    # federation dependencies. ``inspect-evals`` 가 6 bench
    # (livecodebench_pro / tau2_telecom / gpqa_diamond / hle / osworld /
    # mle_bench) 를 cover, ``inspect-harbor`` 가 SWE-bench Pro 1 bench
    # 추가. Both gated by ``autoresearch/bench_means.py`` 의 A1
    # graceful-skip — Docker / VM / vision 부재 시 해당 bench skip 하고
    # ``missing_benches`` Goodhart surface 에 등록. B1 grounding
    # survey: vanilla LiveCodeBench port 부재 확인 → F1.b
    # ``livecodebench_pro`` substitution 결정.
    "inspect-evals>=0.13.0",
    "inspect-harbor>=0.4.5",
]
# OpenLLMetry (Apache-2.0) — OTel-compatible LLM/agent tracing.
# Lazy-imported in core/observability/ so default `uv sync` cold-start is
# unaffected. Activated by the ``obs_otel_export`` tool only when an OTLP
# endpoint is configured. See docs/plans/eval-petri-p3b-2-execution.md
# § Future tooling — Observability.
obs = [
    "traceloop-sdk>=0.34.0",
    "opentelemetry-instrumentation-anthropic>=0.39.0",
    # opentelemetry-api 는 traceloop-sdk 의 transitive 의존이지만
    # core/observability/otel_export.py 가 직접 ``from opentelemetry
    # import trace`` 하므로 deptry DEP001 회피 위해 명시.
    "opentelemetry-api>=1.27.0",
]
# Visualization for Petri audit results — matplotlib (PSF/BSD-3) for
# static PNG/SVG. Lazy-imported in plugins/petri_audit/viz.py. See plan
# § Reporting & Visualization. seaborn / plotly / kaleido / inspect_viz
# 는 P3-b-2b/c 진입 시 실 사용 코드 동반 별도 PR (P1=inspect_viz,
# P3=plotly 인터랙티브).
viz = [
    "matplotlib>=3.8.0",
]
# P4 D 단계 — DSPy compiler-style prompt optimization
# (plugins/petri_audit/optimize.py). PR-CLEANUP-D1 (2026-06-10) dropped
# instructor + textgrad with their dead consumers (judge_schema /
# textgrad_wrapper). lazy import — default `uv sync` cold-start 영향 0.
reason = [
    "dspy>=3.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# Allow `@ git+https://...` direct references — required by the [audit]
# optional-dependency that pins inspect-petri to a main-branch commit
# (Petri 3.0 has no PyPI release yet). Confined to optional extras so
# default `uv sync` is unaffected.
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["core", "plugins"]

[tool.hatch.build.targets.sdist]
include = [
    "/pyproject.toml",
    "/README.md",
    "/README.ko.md",
    "/CHANGELOG.md",
    "/LICENSE",
    "/NOTICE",
    "/core",
    "/plugins",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short --strict-markers -m 'not live'"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring external services",
    "live: marks tests that make real LLM API calls (deselect with '-m \"not live\"')",
    "policy_real: PR-β1 — tests/plugins/petri_audit conftest's self_improving_loop_fallback_policy stub is bypassed for these tests so they can verify the real loader contract",
]

[dependency-groups]
dev = [
    "bandit>=1.8.0",
    "codespell>=2.3.0",
    "deptry>=0.25.0",
    "import-linter>=2.0",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    # Render-lint stack — version-matched with .pre-commit-config.yaml and
    # .github/workflows/pages.yml so local + CI surfaces match.
    "pymarkdownlnt>=0.9.37",
    "yamllint>=1.38.0",
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.0",
    "ruff>=0.15.2",
    "twine>=6.0.0",
    "types-pyyaml>=6.0.12.20250915",
    # Adds zstd support to stdlib zipfile so scripts/validate_petri_bundle.py
    # can open Petri .eval archives without the heavy [audit] extra.
    # Python 3.14+ has native zstd in zipfile and this becomes a no-op shim.
    "zipfile-zstd>=0.0.4",
    "Pillow>=10.0.0",
]
# Hero visualization scripts — opt-in only via ``uv sync --group viz``.
# manim transitively requires system pangocairo which is not available
# on the default CI container; gating behind a non-default group keeps
# the main CI gates fast. Tests using these deps (test_hero_frame_ratchet,
# test_verify_hero_layout) auto-skip when the deps are missing.
viz = [
    # PR-CLEANUP-D3A (2026-06-10) — numpy moved here from main deps: its last
    # core consumer (verification/stats Krippendorff) was deleted; remaining
    # importers are viz scripts (manim pulls numpy transitively regardless).
    "numpy>=2.2.0",
    "manim>=0.20.1",
    # Step 2 typography drift gate — `verify_hero_layout.py` shapes every
    # ratchet site's text via HarfBuzz and stores the glyph cluster
    # sequence in `layout_baseline.json`, catching Helvetica Neue + Pango
    # kerning drift ("GE ODE", "g eneration") at compile time instead of
    # post-render audit. See .claude/skills/viz-frame-audit/rules/
    # typography-drift-gate.md.
    "uharfbuzz>=0.54.1",
    # Step 3 frame ratchet — `tests/test_hero_frame_ratchet.py` extracts
    # key timestamps from rendered scenes and diffs them against
    # committed baselines (`tests/visualizations/baselines/`). Catches
    # categories 2 (padding intrusion) and 4 (frame-order error) that
    # the typography drift gate (Step 2) cannot see. Mapbox `pixelmatch`
    # JS port, anti-aliasing-aware perceptual diff. See
    # .claude/skills/viz-frame-audit/rules/pixel-ratchet.md.
    "pixelmatch>=0.4.0",
]


# v0.52 phase 6 — process binding 강제 (B2/B8 재발 방지)
# CLI/agent/server/channels 사이의 직접 import 를 정적 차단한다.
# 위반 시 `lint-imports` 실패 → CI 에서 PR merge 차단.
[tool.importlinter]
root_package = "core"

[[tool.importlinter.contracts]]
name = "CLI must not import server/messaging (process boundary)"
type = "forbidden"
source_modules = ["core.cli"]
forbidden_modules = ["core.server", "core.messaging"]
# v0.52 phase 6 — geode serve 명령이 cli/__init__.py 안에 있어서
# daemon entry 가 cli/ 의 일부로 남아있음. v0.53 에서 server/entrypoint.py
# 로 분리하면 이들 ignore 제거.
ignore_imports = [
    "core.cli.typer_serve -> core.server.supervised.services",
    "core.cli.typer_serve -> core.server.supervised.webhook_handler",
    "core.cli.typer_serve -> core.server.ipc_server.poller",
    "core.cli.typer_serve -> core.messaging.binding",
    "core.cli.scheduler_drain -> core.server.supervised.services",
    "core.wiring.adapters -> core.messaging.binding",
]

[[tool.importlinter.contracts]]
name = "Agent stays pure (no CLI/server)"
type = "forbidden"
source_modules = ["core.agent"]
forbidden_modules = ["core.cli", "core.server"]
# Historical exceptions while agent/ still imports selected CLI utilities
# (session_checkpoint, transcript, redaction, bash_tool, commands).
ignore_imports = [
    # AgenticLoop implementation lives in core/agent/loop/agent_loop.py.
    "core.agent.loop.agent_loop -> core.cli.commands",
    "core.agent.approval -> core.cli",
    "core.agent.worker -> core.cli.tool_handlers",
    # PR-SELF-IMPROVING-UMBRELLA (2026-05-31) — the self-improving audit runner
    # moved under ``core`` (was ``autoresearch.train``, outside root_package so
    # the edge was invisible). The import is a LAZY, ImportError-guarded read of
    # the quota banner inside ``run_audit`` (``core/self_improving/train.py``
    # ~L1304: ``try: from core.cli.quota_banner import …; except ImportError: skip``)
    # so a packaged distro without ``core.cli`` degrades gracefully. It is the
    # same "selected-CLI-utility from a non-CLI module" exception the entries
    # above document, not a module-load coupling.
    "core.self_improving.measure -> core.cli.quota_banner",
]

[[tool.importlinter.contracts]]
name = "Server may host agent but never CLI"
type = "forbidden"
source_modules = ["core.server"]
forbidden_modules = ["core.cli"]
# v0.52 phase 6 — server/supervised/services.py (구 gateway/shared_services) 가
# 여전히 cli/{commands,session_state,tool_handlers} + wiring/bootstrap 을 통해
# cli/startup 을 import. v0.53 에서 daemon-side handler 를 server/ipc_server/handlers/
# 로 옮기면서 정리.
ignore_imports = [
    "core.server.supervised.services -> core.cli.commands",
    "core.server.supervised.services -> core.cli.session_state",
    "core.server.supervised.services -> core.cli.tool_handlers",
    "core.server.supervised.services -> core.cli.bootstrap",
    "core.agent.worker -> core.cli.tool_handlers",
    # AgenticLoop implementation lives in core/agent/loop/agent_loop.py.
    "core.agent.loop.agent_loop -> core.cli.commands",
    "core.agent.approval -> core.cli",
    "core.server.ipc_server.poller -> core.cli",
    "core.server.ipc_server.poller -> core.cli.session_state",
    # PR-SELF-IMPROVING-UMBRELLA (2026-05-31) — see the matching note on the
    # "Agent stays pure" contract above. Lazy, ImportError-guarded read of the
    # quota banner from the relocated audit runner.
    "core.self_improving.measure -> core.cli.quota_banner",
]

[[tool.importlinter.contracts]]
name = "Messaging integration is capability-pure (no process imports)"
type = "forbidden"
source_modules = ["core.messaging"]
forbidden_modules = ["core.cli", "core.server", "core.agent"]
# v0.52 phase 6 — channel_manager (구) 의 BasePoller 의존은 사실 channels 가
# poller 추상화를 알아야 함. v0.53 에서 poller_base 를 channels/ 로 승격할지
# server/ 에 둘지 결정.
ignore_imports = [
    "core.messaging.binding -> core.server.supervised.poller_base",
]

[tool.ruff]
target-version = "py312"
line-length = 100
# S-2 (2026-06-11) — "tests" removed from src roots: with the test tree on
# the source-mirror convention, tests/core/<pkg>/ made ruff's first-party
# resolver see a second `core.*` package under the tests root and silently
# flipped isort grouping for function-body import blocks.
src = ["core", "plugins", "scripts"]
extend-exclude = [
    ".geode",        # runtime config + skill scripts (not part of codebase)
    ".claude",       # Claude Code session artifacts
]

[tool.ruff.lint]
# Rule families:
#   E/F/W   pycodestyle + pyflakes baseline
#   I       isort
#   UP      pyupgrade — pin to py312 idioms
#   B       flake8-bugbear — common gotchas
#   SIM     flake8-simplify
#   S       flake8-bandit subset (overlaps bandit; keep both for dual coverage)
#   N       pep8-naming
#   C4      flake8-comprehensions
#   C901    mccabe cyclomatic complexity (per-function)
#   PLR     pylint refactor (max-args/branches/returns/statements)
#   TID     flake8-tidy-imports — banned APIs (TID251), relative imports (TID252)
#   RUF     ruff-specific
select = ["E", "F", "W", "I", "UP", "B", "SIM", "S", "N", "C4", "C901", "PLR", "TID", "RUF"]
ignore = [
    "S101",   # assert — used extensively in tests and fixture validation
    "S311",   # non-cryptographic random — intentional in data generator
    "N806",   # non-lowercase variable — FIXTURE_MAP, COMMAND_MAP patterns
    "N803",   # invalid argument name — LangGraph callback signatures
    "RUF001", # ambiguous unicode char in string — Korean/English mixed project
    "RUF002", # ambiguous unicode char in docstring
    "RUF003", # ambiguous unicode char in comment
    "RUF012", # mutable class default — Pydantic models handle this
    "RUF059", # unused unpacked variable — LangGraph stream event destructuring
    # PLR rule subset — informational rather than actionable for the current codebase:
    "PLR2004", # magic-value comparison — too noisy on score thresholds, status codes
    "PLR0904", # too-many-public-methods — incompatible with Pydantic / Typer command classes
    "PLR0911", # too-many-return-statements — flagged separately when it matters
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106", "S310", "B017", "E501", "PLR0915", "PLR0912", "PLR0913"]
"core/agent/bash_tool.py" = ["S602"]  # shell=True is intentional for agentic bash tool
# Manim visualization scripts use long literal vector / score lists; line-length not
# enforced on this path (mirrors the tests/** allowance).
"scripts/visualizations/**.py" = ["E501"]

# Complexity ratchets — thresholds set to current worst offender (day-1 failures = 0).
# Ratchet down per release as step 4-8 of the domain-free-core refactor extracts god methods.
# See docs/architecture/domain-free-core-audit.md §6 for the planned reductions.
[tool.ruff.lint.mccabe]
max-complexity = 62

[tool.ruff.lint.pylint]
max-args = 23         # Worst: 23 (_append_baseline_registry_row — a provenance wiring sink: per-role/seed/bench/held-out/control-arm/power fields; E4 added the bundled power_stats arg, E5 the bundled run_provenance arg, baseline-lineage the bundled historical_spec override). Target: 8.
max-branches = 68     # Worst: 68. Target: 15.
max-returns = 18      # Worst: 18 (PLR0911 silenced project-wide; this kept for ratchet visibility).
max-statements = 273  # Worst: 273 (god method in cli/__init__.py). Target: 60.

# TID251 — banned imports with educational error messages (LangGraph pattern).
# Symbol-level guardrail complementary to import-linter (which is module-level
# layer enforcement). Use for transitional moves, deprecated aliases, and
# specific anti-pattern symbols outside import-linter's contract scope.
#
# Convention: keep the .msg short and uniform — `Moved to <new.path> (v<X.Y.Z> step <N>).`
# The "domain-free-core refactor" context is documented in CHANGELOG and
# docs/architecture/domain-free-core-audit.md; the ban message should be
# scannable, not explanatory.
[tool.ruff.lint.flake8-tidy-imports.banned-api]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B105", "B110", "B311", "B404", "B603", "B607"]

# deptry — dependency drift detection (unused/missing/transitive imports vs pyproject.toml).
# Run via `uv run deptry .` — see CI lint job.
[tool.deptry]
extend_exclude = [
    "tests",
    ".claude",
    ".geode",
    "scripts",
]
known_first_party = ["core", "plugins"]

[tool.deptry.per_rule_ignores]
# DEP002 — declared as dep but not imported anywhere by deptry's static scan.
# All entries below are confirmed-needed:
#   langgraph-checkpoint{,-sqlite}: namespace packages (langgraph.checkpoint.*),
#       deptry's ImportFinder can't link the namespace import back to the
#       distribution name reliably.
#   langgraph: kept as the graph runtime contract for external packages.
#       GEODE core no longer builds a bundled graph in v1, so
#       only TYPE_CHECKING references remain locally.
#   openai-agents: kept for Responses-API runtime path even when no static
#       import exists in core/ today; removing it would break the optional
#       agents harness when re-enabled. Re-evaluate if/when that surface
#       is fully retired.
#   Pillow: imported as `PIL` from core/tools/computer_use.py (desktop extra).
DEP002 = [
    "langgraph",
    "langgraph-checkpoint",
    "langgraph-checkpoint-sqlite",
    "openai-agents",
    "Pillow",
    # `inspect-petri` is loaded via inspect_ai's evaluation harness
    # (its `audit` task is referenced as `inspect_petri/audit` from the
    # CLI), not by direct import in our code. The [audit] extra still
    # needs to declare it so `uv sync --extra audit` installs it.
    "inspect-petri",
    # `opentelemetry-instrumentation-anthropic` is activated transitively
    # by Traceloop.init() at runtime (instrumented monkey-patch on the
    # Anthropic SDK). No direct import in our code, but the [obs] extra
    # must declare it so `uv sync --extra obs` installs the
    # instrumentation alongside traceloop-sdk.
    "opentelemetry-instrumentation-anthropic",
    # `markdown-it-py` is imported only by `scripts/build_self_improving_hub.py`
    # (renders the self-improving hub run-report markdown SoT to HTML at build
    # time). `scripts` is in deptry's `extend_exclude`, so the static scan never
    # sees the import — but the dependency is real and must stay declared so the
    # hub build does not rely on a transitive of `markdownify` that could vanish.
    "markdown-it-py",
]

# DEP004 — module imported but the package is declared as a dev-group
# dependency. The single entry below is a soft optional: the consumer
# (plugins/petri_audit/bundle_sync.py) uses ``importlib.import_module``
# at first call, falls back gracefully when the package is absent, and
# never fails the audit return path on its absence. The package is in
# the dev group (not [audit] extra) because zipfile-zstd is purely a
# read-side helper for the existing validator script + this sync hook —
# operators who only run audits without inspecting bundle internals do
# not need to install it.
DEP004 = [
    # Module name (underscore), not package name (hyphen) — deptry's
    # DEP004 keys on the imported module identifier, not the pip name.
    "zipfile_zstd",
]

[tool.deptry.package_module_name_map]
# Pip name → top-level importable name. Pillow exposes PIL; pyyaml exposes yaml.
Pillow = "PIL"
pyyaml = "yaml"
# traceloop-sdk's top-level import is `traceloop` (then `traceloop.sdk`).
# Without this map deptry treats `from traceloop.sdk import ...` as a
# missing dependency (DEP001).
"traceloop-sdk" = "traceloop"
# opentelemetry-api's top-level import is `opentelemetry` (then
# `opentelemetry.trace`). Same DEP001 mismatch otherwise.
"opentelemetry-api" = "opentelemetry"

# codespell — typo detection in identifiers/strings/comments. Run via pre-commit.
[tool.codespell]
skip = "*.lock,uv.lock,*.svg,*.json,docs/architecture/domain-free-core-audit.md,CHANGELOG.md,.geode/*,.claude/*"
ignore-words-list = "statics,ot,ans,nd,thi,ist,ines,recuse,cant,blockd,Anser,socio-economic,wit"
check-filenames = ""
check-hidden = ""

[tool.coverage.run]
source = ["core"]
branch = true
omit = [
    "core/ui/*",
    "core/cli/__init__.py",
    # Tier 3 #완성 (v0.77.0) — cli/__init__.py 가 sibling 파일로 분할되며,
    # 원본이 omit 대상이었으므로 sibling 파일들도 동일 처리.
    # 이들은 Typer 명령 + 인터랙티브 REPL 코드로 unit test가 아닌
    # CLI smoke + integration 테스트에서 exercise됨.
    "core/cli/welcome.py",
    "core/cli/search_render.py",
    "core/cli/dispatcher.py",
    "core/cli/prompt_session.py",
    "core/cli/interactive_loop.py",
    "core/cli/typer_commands.py",
    "core/cli/typer_init.py",
    "core/cli/typer_serve.py",
    "core/cli/commands.py",
    "core/mcp_server.py",
    "core/tools/web_tools.py",
    "core/tools/document_tools.py",
    # External-API + GUI control tools — covered by live/integration tests,
    # not by default unit suite. Same omit category as web_tools.py.
    "core/tools/web_search.py",
    "core/tools/computer_use.py",
    # Inspect/Petri artifact importers are edge tooling rather than default
    # runtime paths; diagnostics.py remains covered and in-scope.
    "core/audit/dim_extractor.py",
    "core/audit/eval_to_jsonl.py",
    "core/audit/manifest.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 75
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "langgraph.*",
    "langchain_core.*",
    "simple_term_menu.*",
    "mcp.*",
    # Petri × GEODE [audit] optional extra. Only present when
    # `uv sync --extra audit` is run; default sync skips them.
    "inspect_ai.*",
    "inspect_petri.*",
    # PR-SIL-5THEME C2 — S6b bench federation dependencies, same opt-in.
    "inspect_evals.*",
    "inspect_harbor.*",
    # P4 prep — [obs] / [viz] optional extras. Same opt-in pattern.
    "traceloop.*",
    "opentelemetry.*",
    "matplotlib.*",
    "seaborn.*",
    "plotly.*",
    "kaleido.*",
    "inspect_viz.*",
    # Hero visualization extras (manim + harfbuzz + pixelmatch). Only
    # installed via ``uv sync --group viz``; CI default sync skips them.
    # PR-CLEANUP-D3A — numpy moved to the [viz] dev extra; CI's mypy env
    # (no viz extra) must not fail on scripts' lazy numpy imports.
    "numpy.*",
    "manim.*",
    "manim_voiceover.*",
    "uharfbuzz",
    "pixelmatch.*",
    # P4 D 단계 — [reason] optional extra (DSPy).
    "dspy.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Manim visualization scripts subclass Scene (Any) and use literal lists /
# call-time tuples that strict mypy rejects. The viz scripts are opt-in
# (only run when ``uv sync --group viz`` is active) and the tests that
# load them auto-skip without the deps; strict typing isn't the right
# gate for these — a render gate (test_hero_frame_ratchet) catches real
# regressions visually.
module = ["scripts.visualizations.*"]
ignore_errors = true

[[tool.mypy.overrides]]
# Diagnostic probe scripts (PR-CODEX-OAUTH-MESSAGE-FROM-ACCUMULATED
# Sprint H2, 2026-05-26 onwards) — these are operator-run reproducers
# that introspect SDK response objects (ResponseUsage, ResponseOutputItem,
# etc.) and intentionally use loose typing for ad-hoc debug printing.
# Same pattern as scripts.visualizations.
module = ["scripts.probes.*"]
ignore_errors = true

[[tool.mypy.overrides]]
# inspect_ai's `@agent(name=...)` decorator has no stubs, so mypy treats
# anything it wraps as untyped. Confine the relaxation to petri_audit
# modules that legitimately consume the external decorator.
module = ["plugins.petri_audit.*"]
disallow_untyped_decorators = false
